testsuite/poke.pkl/postdecr-diag-1.pk
/* { dg-do compile } */

"foo"--; /* { dg-error "invalid operand.*\n.*" } */
